# py-mon

./: README.md  pyproject.toml
pymon/: __init__.py  cli.py  logger.py  main.py  monitor.py
